<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Water Bottle Saver</string>
    <string name="action_settings">Settings</string>
    <color name="forestGreen">#228B22</color>
    <string name="enter_water_fill">Please enter the number of times you filled your water bottle:</string>
    <color name="purple">#800080</color>
    <string name="enter_water_button">Enter</string>
    <string name="hint_fill_bottle">Summary will appear here</string>
    <string name="total_bottle_fill_text">Total Water Bottles Filled:  </string>
    <string name="no_bottles_filled_text">0 </string>
    <string name="menu_clear">Clear Data</string>
    <string name="avg_bottles_saved_text">Average Water Bottles Saved:  </string>
    <string name="enter_bottle_size_text">Please enter the size of your water bottle (in mL) : </string>
    <string name="enter_hint_text">Hint: 20oz ~= 590mL</string>

</resources>